# reshat

./: .dockerignore  .pdm-python  Dockerfile  Readme.md  docker-compose.yml  docker-entrypoint.sh  load_images.sh  pyproject.toml  requirements.txt  uwsgi.ini
payment/app_payment/: admin.py  models.py  urls.py  views.py
payment/payment/: settings.py  urls.py
payment/payment/templates/: item_detail.html
